# RMdevBoard_ChibiOS

./: .gitignore  CMakeLists.txt  README.md  STlink.sh  dev_diary.rst  param.txt  shoot_pwm.c
3_driver/: README.md  adis16265.c  adis16470.c  driver.mk  ist8310.c  judge.c  mpu6500.c  uwb_driver.c
3_driver/inc/: adis16265.h  adis16470.h  bullet_tracker_task.h  hcsr04.h  ist8310.h  judge.h  mpu6500.h  uwb_driver.h
4_module/: README.md  attitude.c  attitude_estimator_mpu6500.c  barrel_heat_controller.c  chassis_velocity_generator.c  gimbal.c  gimbal_hero.c  gimbal_simple_controller.c  gimbal_sys_iden.c  math_misc.c  module.mk
4_module/dsp/: dsp.mk
4_module/dsp/src/ControllerFunctions/: arm_pid_init_f32.c
4_module/inc/: attitude.h  attitude_estimator_mpu6500.h  barrel_heat_controller.h  chassis_velocity_generator.h  gimbal.h  gimbal_simple_controller.h  math_misc.h
5_task/: README.md  attitude_estimator_task.c  auto_fetch_task.c  bullet_count_task.c  bullet_tracker_task.c  canBusProcess.c  can_communication_task.c  can_motor_task.c  chassis.c  chassis_old.c  command_mixer.c  command_mixer_task.c  detect_error_task.c  error.c  feeder.c  hero_preload_task.c  keyboard.c  mavlink_comm.c  task.mk
5_task/inc/: attitude_estimator_task.h  auto_fetch_task.h  bullet_count_task.h  bullet_tracker_task.h  canBusProcess.h  can_communication_task.h  can_motor_task.h  can_uwb_task.h  chassis.h  chassis_old.h  command_mixer_task.h  detect_error_task.h  error.h  feeder.h  keyboard.h  lift_claw_logan.h  mavlink_comm.h
5_task/mavlink/minimal/: version.h
6_tool/: README.md  calibrate_sensor.c  run.jdebug  sdlog.c  system_identification.c  tool.mk
6_tool/cmake/: arm-none-eabi.cmake
6_tool/inc/: calibrate_sensor.h  sdlog.h  system_identification.h
CAN/: .project
dev/: .cproject  .project  Makefile  MiceTrack.c  README.md  adis16265.c  attitude.c  barrelStatus.c  bullet_tracker_task.c  calibrate_sensor.c  canBusProcess.c  can_bus.c  can_cfg.c  can_comm.c  chassis.c  chassis_pid.c  chassis_task.c  chconf.h  command_mixer.c  complementary_filter.c  custom_data.c  dbus.c  dev.mk  ekf.c  ekf_new.c  ekf_new.h  error.c  exti.c  feeder.c  flash.c  gimbal.c  gimbal_sys_iden.c  halconf.h  hcsr04.c  imu_temp.c  ist8310.c  judge.c  keyboard.c  magazine_cover_task.c  main.c  (+21 more)
dev/arm_gsl_lib/lib/pkgconfig/: gsl.pc
dev/conf/: halconf.h  mcuconf.h  roboconf.h
dev/inc/: 1.8 TFT_ascii.h  MiceTrack.h  adis16265.h  attitude.h  barrelStatus.h  bullet_tracker_task.h  calibrate_sensor.h  canBusProcess.h  can_bus.h  can_cfg.h  can_comm.h  chassis.h  chassis_config.h  chassis_pid.h  chassis_task.h  command_mixer.h  complementary_filter.h  custom_data.h  dbus.h  ekf.h  error.h  exti.h  feeder.h  flash.h  gimbal.h  hcsr04.h  imu_temp.h  ist8310.h  judge.h  keyboard.h  magazine_cover_task.h  main.h  math_misc.h  matrix.h  mavlink_comm.h  mpu6500.h  params.h  pid_chassis.h  power_module.h  pwm_test.h  (+9 more)
dev/params/: params_beck_gimbal_20180203.txt
docs/: README.md
docs/params/: Edward20180217.txt  internalPID_20180130.txt  params_beck_gimbal_20180204.txt  soldier01_0629.txt
dsp/: dsp.mk
ext/fatfs/src/: ffconf.h
hw/: board.h  board.mk  board_rm2017.h  board_rm2018.h
hw/cfg/: board.chcfg
mavlink/: mavlink_helpers.h  protocol.h
misc/: gimbal_sys_iden.c  tft_display.h
os/common/ports/ARMCMx/compilers/GCC/: rules.mk
os/ext/CMSIS/ST/STM32F4xx/: stm32f4xx.h
os/ext/CMSIS/include/: arm_math.h
os/hal/: hal.mk
os/hal/ports/STM32/LLD/CANv1/: can_lld.c
os/hal/ports/STM32/LLD/TIMv1/: pwm_lld.c  pwm_lld.h
os/hal/ports/STM32/LLD/USARTv1/: uart_lld.c  uart_lld.h
os/hal/ports/STM32/LLD/USARTv2/: uart_lld.c
os/hal/ports/STM32/STM32F3xx/: stm32_registry.h
os/hal/ports/STM32/STM32F4xx/: hal_lld.c  platform.mk
os/hal/ports/STM32/STM32F7xx/: hal_lld.c
os/hal/ports/STM32/STM32L0xx/: hal_lld.h
os/hal/ports/STM32/STM32L4xx/: hal_lld.c  hal_lld.h
os/rt/: rt.mk
os/various/: shell.c
stm32f4_fwlib/src/: stm32f4xx_tim.c
trans/: buzzer.c  buzzer.h  mpu6500.c  mpu6500.h
